# porto

webporto/: db.sqlite3  pyproject.toml
webporto/app/: admin.py  apps.py  form.py  models.py  urls.py  views.py
webporto/app/migrations/: 0001_initial.py
webporto/templates/app/: create_article.html  home.html
webporto/webporto/: asgi.py  settings.py  urls.py  wsgi.py
